Make dropdown container fixed to avoid scrollbars

--- a/src/styles.styl
+++ b/src/styles.styl
@@ -79,6 +79,8 @@
 
 
 #ractive-select-dropdown-container
+    position fixed
     .dropdown
         position fixed
         left -9999px
+        z-index 500
